Move the close button to bottom to avoid link overlap

--- a/resources/assets/sass/client-custom.scss
+++ b/resources/assets/sass/client-custom.scss
@@ -261,7 +261,7 @@
 .close-chat {
   display: flex;
   justify-content: center;
-  margin-top: -45px;
+  margin-top: -30px;
   margin-bottom: 10px;
 
   @media (min-width: 450px) {
